Time: 0 ms (100.00%) | Memory: 44.4 MB (24.60%) - LeetSync